// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`change head content when pulling down 1`] = `
<div class="buri-pull-refresh">
  <div class="buri-pull-refresh__track" style="transition-duration: 0ms; transform: translate3d(0,20px, 0);">
    <div class="buri-pull-refresh__head">
      <div class="buri-pull-refresh__text">下拉即可刷新...</div>
    </div>
  </div>
</div>
`;

exports[`change head content when pulling down 2`] = `
<div class="buri-pull-refresh">
  <div class="buri-pull-refresh__track" style="transition-duration: 0ms; transform: translate3d(0,75px, 0);">
    <div class="buri-pull-refresh__head">
      <div class="buri-pull-refresh__text">释放即可刷新...</div>
    </div>
  </div>
</div>
`;

exports[`change head content when pulling down 3`] = `
<div class="buri-pull-refresh">
  <div class="buri-pull-refresh__track" style="transition-duration: 300ms; transform: translate3d(0,50px, 0);">
    <div class="buri-pull-refresh__head">
      <div class="buri-loading buri-loading--circular"><span class="buri-loading__spinner buri-loading__spinner--circular" style="width: 16px; height: 16px;"><svg viewBox="25 25 50 50" class="buri-loading__circular"><circle cx="50" cy="50" r="20" fill="none"></circle></svg></span><span class="buri-loading__text">加载中...</span></div>
    </div>
  </div>
</div>
`;

exports[`change head content when pulling down 4`] = `
<div class="buri-pull-refresh">
  <div class="buri-pull-refresh__track" style="transition-duration: 300ms; transform: translate3d(0,50px, 0);">
    <div class="buri-pull-refresh__head">
      <div class="buri-loading buri-loading--circular"><span class="buri-loading__spinner buri-loading__spinner--circular" style="width: 16px; height: 16px;"><svg viewBox="25 25 50 50" class="buri-loading__circular"><circle cx="50" cy="50" r="20" fill="none"></circle></svg></span><span class="buri-loading__text">加载中...</span></div>
    </div>
  </div>
</div>
`;

exports[`change head content when pulling down 5`] = `
<div class="buri-pull-refresh">
  <div class="buri-pull-refresh__track" style="transition-duration: 300ms;">
    <div class="buri-pull-refresh__head"></div>
  </div>
</div>
`;

exports[`custom content by slots 1`] = `
<div class="buri-pull-refresh">
  <div class="buri-pull-refresh__track" style="transition-duration: 0ms; transform: translate3d(0,20px, 0);">
    <div class="buri-pull-refresh__head">pulling 20</div>
  </div>
</div>
`;

exports[`custom content by slots 2`] = `
<div class="buri-pull-refresh">
  <div class="buri-pull-refresh__track" style="transition-duration: 0ms; transform: translate3d(0,75px, 0);">
    <div class="buri-pull-refresh__head">loosing 75</div>
  </div>
</div>
`;

exports[`custom content by slots 3`] = `
<div class="buri-pull-refresh">
  <div class="buri-pull-refresh__track" style="transition-duration: 300ms; transform: translate3d(0,50px, 0);">
    <div class="buri-pull-refresh__head">loading 50</div>
  </div>
</div>
`;

exports[`not in page top 1`] = `
<div class="buri-pull-refresh">
  <div class="buri-pull-refresh__track" style="transition-duration: 0ms;">
    <div class="buri-pull-refresh__head"></div>
  </div>
</div>
`;

exports[`render success slot 1`] = `
<div class="buri-pull-refresh">
  <div class="buri-pull-refresh__track" style="transition-duration: 300ms; transform: translate3d(0,50px, 0);">
    <div class="buri-pull-refresh__head">Custom Success</div>
  </div>
</div>
`;

exports[`render success text 1`] = `
<div class="buri-pull-refresh">
  <div class="buri-pull-refresh__track" style="transition-duration: 300ms; transform: translate3d(0,50px, 0);">
    <div class="buri-pull-refresh__head">
      <div class="buri-pull-refresh__text">success</div>
    </div>
  </div>
</div>
`;

exports[`render success text 2`] = `
<div class="buri-pull-refresh">
  <div class="buri-pull-refresh__track" style="transition-duration: 300ms;">
    <div class="buri-pull-refresh__head"></div>
  </div>
</div>
`;

exports[`should set height when using head-height 1`] = `
<div class="buri-pull-refresh">
  <div class="buri-pull-refresh__track" style="transition-duration: 0ms;">
    <div class="buri-pull-refresh__head" style="height: 100px;"></div>
  </div>
</div>
`;
